fix: v3 accordion focus ring gap + useDisclosure disabled docs example styles (#7315)
* fix v3 accordion focus ring gap

* add disabled styles in useDisclosure docs

--- a/packages/@adobe/spectrum-css-temp/components/accordion/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/accordion/index.css
@@ -107,7 +107,7 @@ governing permissions and limitations under the License.
   &.focus-ring {
     border-radius: var(--spectrum-global-dimension-static-size-100);
     outline: solid 2px var(--spectrum-accordion-item-focus-ring-color);
-    outline-offset: -4px;
+    outline-offset: -2px;
   }
 }
 
